--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   flutter_riverpod: ^2.3.6
   image_picker: ^1.0.7
   google_mlkit_text_recognition: ^0.11.0
-
+  sqflite: ^2.3.3
+  path: ^1.9.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
